# test_library

./: .env.sample  .gitignore  CLAUDE.md  Dockerfile  README.md  docker-compose.test.yml  docker-compose.yml  entrypoint.sh  pyproject.toml
.continue/rules/: use-authentication.md
app/: config.py  database.py  main.py
app/alembic/: env.py
app/alembic/versions/: 001_add_user_table.py  002_add_user_id_to_borrow.py  003_borrow_dates_to_date.py  004_remove_book_title_unique.py  6660f8f328c1_1.py  d1d4c18814b8_initial_revision.py
app/auth/: config.py  models.py  router.py  schemas.py  utils.py
app/authors/: core.py  models.py  router.py  schemas.py
app/books/: core.py  models.py  router.py  schemas.py
app/core/: base.py
tests/: conftest.py  test_borrow_dao.py
