[tool.poetry]
name = "mobile-library"
version = "0.1.0"
description = ""
authors = ["gennady <topchiev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
alembic = "^1.14.0"
asyncpg = "^0.30.0"
sqlalchemy = "^2.0.36"
pydantic-settings = "^2.7.1"
fastapi = "^0.115.6"
uvicorn = "^0.34.0"
httpx = "^0.28.1"
python-dotenv = "^1.0.1"

python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.12"
pydantic = {extras = ["email"], version = "^2.12.5"}
passlib = {extras = ["argon2"], version = "^1.7.4"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
pytest-asyncio = "^0.25.0"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
addopts = "--no-header"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
